// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radio > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        aria-disabled="false"
        class="styles_medium__bnlb224 styles__bnlb222"
        data-checked="false"
        data-invalid="false"
      >
        <input
          aria-disabled="false"
          class="styles__bnlb22a"
          id="_r_0_"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__bnlb22b"
          viewBox="0 0 24 24"
        >
          <title>
            radio
          </title>
          <g>
            <circle
              class="styles__bnlb22e"
              cx="12"
              cy="12"
              r="10"
              stroke-width="6"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="styles__bnlb22d"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="styles__bnlb22c"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="styles_medium__bnlb227 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_0_"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        aria-disabled="false"
        class="styles_small__bnlb223 styles__bnlb222"
        data-checked="false"
        data-invalid="false"
      >
        <input
          aria-describedby="_r_1f_"
          aria-disabled="false"
          class="styles__bnlb22a"
          id="_r_1e_"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__bnlb22b"
          viewBox="0 0 24 24"
        >
          <title>
            radio
          </title>
          <g>
            <circle
              class="styles__bnlb22e"
              cx="12"
              cy="12"
              r="8"
              stroke-width="6"
            />
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="styles__bnlb22d"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="styles__bnlb22c"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
        <label
          class="styles_small__bnlb226 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_bodySmall__1yhcak8k style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_1e_"
        >
          Choice
        </label>
      </div>
      <span
        class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
        id="_r_1f_"
        role="status"
      >
        Helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly when checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        aria-disabled="false"
        class="styles_medium__bnlb224 styles__bnlb222"
        data-checked="true"
        data-invalid="false"
      >
        <input
          aria-disabled="false"
          checked=""
          class="styles__bnlb22a"
          id="_r_o_"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__bnlb22b"
          viewBox="0 0 24 24"
        >
          <title>
            radio
          </title>
          <g>
            <circle
              class="styles__bnlb22e"
              cx="12"
              cy="12"
              r="10"
              stroke-width="6"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="styles__bnlb22d"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="styles__bnlb22c"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="styles_medium__bnlb227 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_o_"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly when disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        aria-disabled="true"
        class="styles_medium__bnlb224 styles__bnlb222"
        data-checked="false"
        data-invalid="false"
      >
        <input
          aria-disabled="true"
          class="styles__bnlb22a"
          disabled=""
          id="_r_6_"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__bnlb22b"
          viewBox="0 0 24 24"
        >
          <title>
            radio
          </title>
          <g>
            <circle
              class="styles__bnlb22e"
              cx="12"
              cy="12"
              r="10"
              stroke-width="6"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="styles__bnlb22d"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="styles__bnlb22c"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="styles_medium__bnlb227 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_6_"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly when error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        aria-disabled="false"
        class="styles_medium__bnlb224 styles__bnlb222"
        data-checked="false"
        data-invalid="true"
      >
        <input
          aria-describedby="_r_v_"
          aria-disabled="false"
          class="styles__bnlb22a"
          id="_r_u_"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__bnlb22b"
          viewBox="0 0 24 24"
        >
          <title>
            radio
          </title>
          <g>
            <circle
              class="styles__bnlb22e"
              cx="12"
              cy="12"
              r="10"
              stroke-width="6"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="styles__bnlb22d"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="styles__bnlb22c"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="styles_medium__bnlb227 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_u_"
        >
          Choice
        </label>
      </div>
      <span
        class="style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_danger__1yhcak89 style_variant_caption__1yhcak8p style_undefined_compound_0__1yhcak81a style_undefined_compound_48__1yhcak82m"
        id="_r_v_"
        role="status"
      >
        Invalid value
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly when helper 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        aria-disabled="false"
        class="styles_medium__bnlb224 styles__bnlb222"
        data-checked="false"
        data-invalid="false"
      >
        <input
          aria-describedby="_r_17_"
          aria-disabled="false"
          class="styles__bnlb22a"
          id="_r_16_"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__bnlb22b"
          viewBox="0 0 24 24"
        >
          <title>
            radio
          </title>
          <g>
            <circle
              class="styles__bnlb22e"
              cx="12"
              cy="12"
              r="10"
              stroke-width="6"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="styles__bnlb22d"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="styles__bnlb22c"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="styles_medium__bnlb227 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_16_"
        >
          Choice
        </label>
      </div>
      <span
        class="style__1yhcak80 style_prominence_weak__1yhcak87 style_sentiment_neutral__1yhcak8b style_variant_caption__1yhcak8p style_undefined_compound_3__1yhcak81d style_undefined_compound_67__1yhcak835"
        id="_r_17_"
        role="status"
      >
        Helper
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders correctly with tooltip 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1u0cyic5"
    >
      <div
        class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
      >
        <div
          aria-disabled="false"
          class="styles_medium__bnlb224 styles__bnlb222"
          data-checked="false"
          data-invalid="false"
        >
          <input
            aria-disabled="false"
            class="styles__bnlb22a"
            id="_r_c_"
            name="radio"
            type="radio"
            value="choice"
          />
          <svg
            class="styles__bnlb22b"
            viewBox="0 0 24 24"
          >
            <title>
              radio
            </title>
            <g>
              <circle
                class="styles__bnlb22e"
                cx="12"
                cy="12"
                r="10"
                stroke-width="6"
              />
              <circle
                cx="12"
                cy="12"
                r="10"
                stroke-width="2"
              />
              <circle
                class="styles__bnlb22d"
                cx="12"
                cy="12"
                r="8"
              />
              <circle
                class="styles__bnlb22c"
                cx="12"
                cy="12"
                r="5"
              />
            </g>
          </svg>
          <label
            class="styles_medium__bnlb227 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
            for="_r_c_"
          >
            Choice
          </label>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`radio > renders without name 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__bnlb220 styles__mxir930 styles_flexDirection_column_xxsmall__mxir932d styles_gap_0.25rem_xxsmall__mxir935j"
    >
      <div
        aria-disabled="true"
        class="styles_medium__bnlb224 styles__bnlb222"
        data-checked="false"
        data-invalid="false"
      >
        <input
          aria-disabled="true"
          class="styles__bnlb22a"
          disabled=""
          id="_r_i_"
          type="radio"
          value="choice"
        />
        <svg
          class="styles__bnlb22b"
          viewBox="0 0 24 24"
        >
          <title>
            radio
          </title>
          <g>
            <circle
              class="styles__bnlb22e"
              cx="12"
              cy="12"
              r="10"
              stroke-width="6"
            />
            <circle
              cx="12"
              cy="12"
              r="10"
              stroke-width="2"
            />
            <circle
              class="styles__bnlb22d"
              cx="12"
              cy="12"
              r="8"
            />
            <circle
              class="styles__bnlb22c"
              cx="12"
              cy="12"
              r="5"
            />
          </g>
        </svg>
        <label
          class="styles_medium__bnlb227 styles__bnlb225 styles__bnlb228 style__1yhcak80 style_prominence_default__1yhcak84 style_sentiment_neutral__1yhcak8b style_variant_body__1yhcak8j style_undefined_compound_0__1yhcak81a style_undefined_compound_64__1yhcak832"
          for="_r_i_"
        >
          Choice
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
